[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/base.gd" type="Script" id=1]
[ext_resource path="res://assets/button/botaoVerde.png" type="Texture" id=2]
[ext_resource path="res://assets/button/botaoLaranja.png" type="Texture" id=3]
[ext_resource path="res://assets/font/poetson-60.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/font/poetson.fnt" type="BitmapFont" id=5]

[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( 3.6267, -0.198364 )
b = Vector2( -2.93576, 0.628174 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 7.60804, -594.219 )
b = Vector2( 7.82393, -71.7083 )

[sub_resource type="SegmentShape2D" id=3]

custom_solver_bias = 0.0
a = Vector2( -38.2641, -631.08 )
b = Vector2( -38.4168, -70.9518 )

[node name="base" type="Node2D"]

script/script = ExtResource( 1 )

[node name="btnJogar" type="Node2D" parent="."]

editor/display_folded = true
visibility/behind_parent = true
transform/pos = Vector2( 243.752, 1112.71 )
transform/scale = Vector2( 1.5, 1.5 )
z/z = 3

[node name="btn1" type="TouchScreenButton" parent="btnJogar"]

normal = ExtResource( 2 )
pressed = ExtResource( 3 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Control" type="Control" parent="btnJogar"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label" type="Label" parent="btnJogar/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 343.0
margin/bottom = 110.0
custom_fonts/font = ExtResource( 4 )
custom_constants/shadow_offset_x = 0
text = "PLAY"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="highscore" type="Label" parent="btnJogar/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -157.0
margin/top = -132.0
margin/right = 495.0
margin/bottom = -70.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="title" type="Label" parent="btnJogar/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -157.0
margin/top = -180.0
margin/right = 495.0
margin/bottom = -118.0
custom_fonts/font = ExtResource( 5 )
text = "HIGHSCORE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1000.0
margin/bottom = 1700.0
color = Color( 0.243607, 0.520657, 0.605469, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ballsBase" type="Node2D" parent="."]

editor/display_folded = true

[node name="Area2D" type="Area2D" parent="ballsBase"]

transform/pos = Vector2( -1.50732, 0 )
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="StaticBody2D" type="StaticBody2D" parent="ballsBase/Area2D"]

transform/pos = Vector2( 837.517, 1829.69 )
transform/scale = Vector2( 21.5796, 2.00622 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 7.06609, 0, 0, 1.23663, -18.1032, -69.5123 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ballsBase/Area2D/StaticBody2D"]

transform/pos = Vector2( -18.1032, -69.5123 )
transform/scale = Vector2( 7.06609, 1.23663 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="ballsBase/Area2D/StaticBody2D"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D 3" type="CollisionShape2D" parent="ballsBase/Area2D/StaticBody2D"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 2

[node name="balls" type="Position2D" parent="ballsBase"]

transform/pos = Vector2( 520.713, 33.9767 )
transform/scale = Vector2( 43.4659, 2.20826 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="Node2D" type="Node2D" parent="."]

transform/pos = Vector2( 13.9475, 100.422 )

[node name="Control" type="Control" parent="Node2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 278.0
margin/top = 288.0
margin/right = 402.0
margin/bottom = 405.0

[node name="Label" type="Label" parent="Node2D/Control"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 92.0
margin/top = 50.0
margin/right = 132.0
margin/bottom = 112.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.734375, 0, 0, 1 )
text = "R"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Node2D/Control"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 176.0
margin/top = 50.0
margin/right = 216.0
margin/bottom = 112.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.150591, 0.976563, 0.0572205, 1 )
text = "G"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="Node2D/Control"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 261.0
margin/top = 50.0
margin/right = 301.0
margin/bottom = 112.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.00430298, 0.153731, 0.550781, 1 )
text = "B"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="Node2D/Control"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 111.0
margin/top = 162.0
margin/right = 249.0
margin/bottom = 224.0
custom_fonts/font = ExtResource( 4 )
text = "drop"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="btnJogar/btn1" to="." method="_on_btn1_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


